--- a/app/src/main/res/layout/activity_sewing.xml
+++ b/app/src/main/res/layout/activity_sewing.xml
@@ -32,6 +32,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/back_btn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="60"
@@ -56,6 +57,7 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/finish_btn"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="40"
@@ -158,6 +160,7 @@
 
 
             <ImageView
+                android:id="@+id/sewing_text_box"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="106"
