--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -3,14 +3,55 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    android:layout_centerHorizontal="true">
+    >
 
-    <ImageView
-        android:id="@+id/logo_icon"
-        android:layout_width="166dp"
-        android:layout_height="70dp"
-        android:background="@drawable/intro_logo"
-        android:layout_centerHorizontal="true"></ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1280"
+        android:gravity="bottom">
+
+        <LinearLayout
+            android:id="@+id/image_linear"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="140"
+            android:weightSum="720"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="244"></View>
+
+
+
+            <ImageView
+                android:id="@+id/logo_icon"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="232"
+                android:background="@drawable/intro_logo"></ImageView>
+
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="244"></View>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="864"></LinearLayout>
+
+    </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
