1. '자수 시작하기' - 인텐트2 : 빈 자수 검증 코드 추가 2. '자수 시작하기' - 준비대기 코드 구현 [치밥과 함께 야근 - 210217]

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="grey">#BDBDBD</color>       <!-- RGB: 128 | 128 | 128 -->
     <color name="white">#ffffff</color>      <!-- RGB: 255 | 255 | 255 -->
     <color name="erase">#FBFBFB</color>      <!-- RGB: 255 | 255 | 255 -->
+    <color name="target">#00ffce</color>      <!-- RGB: 255 | 255 | 255 -->
 
     <!-- 50% LUMINESCENCE -->
     <color name="red">#ff0000</color>        <!-- RGB: 255 | 0   | 0   \/\/ HSL: 0   | 240 | 120 -->
