--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -113,7 +113,7 @@
             android:id="@+id/textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="1-5 준비중 ..."
+            android:text="-"
             android:textColor="#000000"
             android:textStyle="bold"
             android:textSize="20dp"
