--- a/app/src/main/res/layout/canvas.xml
+++ b/app/src/main/res/layout/canvas.xml
@@ -9,7 +9,9 @@
     <Button
         android:id="@+id/color_button_erase"
         android:layout_marginVertical="15dp"
-        android:layout_marginHorizontal="6dp" style= "@style/ColorButton"
+        android:layout_marginRight="6dp"
+        android:layout_marginLeft="48px"
+        style= "@style/ColorButton"
         android:background="@drawable/erase" />
 
     <Button
