--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,17 @@
         <item name="background">@color/white</item>
     </style>
 
+    <style name="Pixel_2">
+        <!-- TODO : 픽셀 사이즈 조정 -->
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">20dp</item>
+
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginLeft">1dp</item>
+        <item name="android:onClick">changeColor</item>
+        <item name="background">@color/white</item>
+    </style>
+
     <style name="CustomAppTheme" parent="Theme.AppCompat">
         <item name="colorAccent">#e91e63</item>
     </style>
