--- a/app/src/main/res/layout/dialog_factory_reset.xml
+++ b/app/src/main/res/layout/dialog_factory_reset.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="240"
     android:background="@drawable/factory_reset_dialog">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="146"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="64"
-        android:layout_marginBottom="30dp"
         android:gravity="bottom"
+        android:orientation="horizontal"
         android:weightSum="500">
 
         <View
@@ -22,7 +28,8 @@
             android:id="@+id/fr_cancle"
             android:layout_width="0dp"
             android:layout_weight="190"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:background="@drawable/factory_reset_cancle" />
 
         <View
@@ -34,7 +41,8 @@
             android:id="@+id/fr_ok"
             android:layout_width="0dp"
             android:layout_weight="190"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:background="@drawable/factory_reset_ok" />
 
         <View
@@ -43,5 +51,10 @@
             android:layout_weight="46"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="30"></LinearLayout>
 
 </LinearLayout>
