--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -270,6 +270,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="476"
+            android:enabled="false"
             android:background="@drawable/embroid_stop_off_btn"></androidx.appcompat.widget.AppCompatButton>
 
 
