--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:shape="rectangle">-->
 
-    <corners
-        android:radius="20dp"></corners>
+<!--    <corners-->
+<!--        android:radius="20dp"></corners>-->
 
-    <size
-        android:width="12dp"
-        android:height="4dp"></size>
+<!--    <size-->
+<!--        android:width="12dp"-->
+<!--        android:height="4dp"></size>-->
 
-    <solid
-        android:color="#009dc7"></solid>
+<!--    <solid-->
+<!--        android:color="#009dc7"></solid>-->
 
-</shape>
+<!--</shape>-->
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#009dc7"
+        android:state_checked="true"></item>
+    <item android:color="#9b9b9b"></item>
+</selector>
