--- a/app/src/main/res/layout/activity_start_embroid.xml
+++ b/app/src/main/res/layout/activity_start_embroid.xml
@@ -38,26 +38,68 @@
             android:layout_height="match_parent"
             android:layout_weight="392"></View>
 
-        <ImageButton
-            android:id="@+id/factory_reset"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="88"
-            android:layout_gravity="center"
-            android:background="@drawable/factory_reset" />
+            android:orientation="vertical"
+            android:weightSum="60">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"></View>
+
+
+            <ImageButton
+                android:id="@+id/factory_reset"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="40"
+                android:layout_gravity="center"
+                android:background="@drawable/factory_reset" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"></View>
+
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="40"></View>
 
-        <ImageButton
-            android:id="@+id/save_btn"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="56"
-            android:layout_gravity="center"
-            android:background="@drawable/setting_save_btn" />
+            android:orientation="vertical"
+            android:weightSum="60">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"></View>
+
+
+            <ImageButton
+                android:id="@+id/save_btn"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="40"
+                android:layout_gravity="center"
+                android:background="@drawable/setting_save_btn" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"></View>
+
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="0dp"
